[project]
name = "pw-homework-module-8"
version = "0.1.0"
description = ""
authors = [
    {name = "RuslanaPashkutska",email = "ryslana.pashkytska@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.13.0,<5.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "redis (>=6.1.0,<7.0.0)",
    "redis-lru (>=0.1.2,<0.2.0)",
    "utils (>=1.0.2,<2.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
